fix dark mode styles

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,10 +18,11 @@ body {
 
 .switch-container{
   position: absolute;
-  top: 10px;
-  right: 10px
+  top: 20px;
+  right: 20px
 }
 
+/* START -- Dark Mode */
 .switch {
   display: inline-block;
   width: 50px;
@@ -45,12 +46,12 @@ body {
 
 .switch:before {
   left: 2px;
-  background-color: #fff;
+  background-color: rgb(255, 243, 216);
 }
 
 .switch:after {
   right: 2px;
-  background-color: #000;
+  background-color: #121212;
 }
 
 input[type="checkbox"] {
@@ -75,6 +76,7 @@ input[type="checkbox"]:checked + .switch {
   padding-bottom: 1.5rem;
   font-size: 50px;
 }
+/* END -- Dark Mode */
 
 /* START -- Scoreboard */
 .boardInfo {
